--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^3.19.5",
     "axios": "^0.21.1",
     "dva": "^2.6.0-beta.6",
+    "moment": "^2.29.1",
     "qs": "^6.10.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
