--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "dva": "^2.6.0-beta.6",
     "moment": "^2.29.1",
     "qs": "^6.10.1",
+    "quill-emoji": "^0.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
