--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "turndown": "^7.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
